--- a/src/main/resources/static/css/scss/pages/_cart.scss
+++ b/src/main/resources/static/css/scss/pages/_cart.scss
@@ -111,8 +111,6 @@
                             }
                         }
 
-                        &.total_price {}
-
                         &.delivery_price {
                             span {
                                 display: block;
@@ -121,6 +119,12 @@
                             span.text {
                                 font-size: 11px;
                                 color: #353535;
+                            }
+                        }
+
+                        &.item_price {
+                            span {
+                                display: block;
                             }
                         }
 
