--- a/src/main/resources/templates/admin/order/orderMng.html
+++ b/src/main/resources/templates/admin/order/orderMng.html
@@ -54,7 +54,7 @@
                                                         </strong>
                                                         <div class="option">[옵션: 선택 X]</div>
                                                     </td>
-                                                    <td th:text="${order.createdBy}"></td>
+                                                    <td th:text="${order.buyerId}"></td>
                                                     <td th:text="${order.orderDate}"></td>
                                                     <td th:text="${order.orderStatus}"></td>
                                                     <td th:if="${status.index == 0}"
@@ -82,7 +82,7 @@
                                                     </strong>
                                                     <div class="option">[옵션: 선택 X]</div>
                                                 </td>
-                                                <td th:text="${order.createdBy}"></td>
+                                                <td th:text="${order.buyerId}"></td>
                                                 <td th:text="${order.orderDate}"></td>
                                                 <td th:text="${order.orderStatus}"></td>
                                                 <td>
