--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <div th:replace="/layouts/defaultLayout.html :: head"></div>
@@ -39,8 +39,15 @@
                                 </thead>
                                 <tbody>
                                     <tr th:each="cartItem : ${cartItems}">
-                                        <td>
-                                            <input type="checkbox" name="cart_check" th:value="${cartItem.cartItemId}">
+                                        <td class="cart_info">
+                                            <input type="checkbox" class="cart_check" name="cart_check" th:value="${cartItem.cartItemId}">
+                                            <input type="hidden" class="price_hidden_input" th:value="${cartItem.price}">
+                                            <input type="hidden" class="salePrice_hidden_input" th:value="${cartItem.salePrice}">
+                                            <input type="hidden" th:id="${'hiddenCount_' + cartItem.cartItemId}" class="count_hidden_input" th:value="${cartItem.count}">
+                                            <input type="hidden" class="totalPrice_hidden_input" th:value="${cartItem.salePrice * cartItem.count}">
+                                            <input type="hidden" class="point_hidden_input" th:value="${cartItem.point}">
+                                            <input type="hidden" class="totalPoint_hidden_input" th:value="${cartItem.totalPoint}">
+                                            <input type="hidden" th:id="${'hiddenItemId_' + cartItem.cartItemId}" class="itemId_hidden_input" th:value="${cartItem.itemId}">
                                         </td>
                                         <td class="thumb">
                                             <a th:href="${'/item/' + cartItem.cartItemId}">
@@ -58,9 +65,9 @@
                                             <span th:if="${cartItem.discount == 0}"
                                                 th:text="|${#numbers.formatInteger(cartItem.price, 0, 'COMMA')}원|"></span>
                                             <span th:if="${cartItem.discount > 0}" style="text-decoration: line-through"
-                                                th:text="|${#numbers.formatInteger(cartItem.salePrice, 0, 'COMMA')}원|"></span>
+                                                th:text="|${#numbers.formatInteger(cartItem.price, 0, 'COMMA')}원|"></span>
                                             <strong th:if="${cartItem.discount > 0}"
-                                                th:text="|${#numbers.formatInteger(cartItem.totalPrice, 0, 'COMMA')}원|"></strong>
+                                                th:text="|${#numbers.formatInteger(cartItem.salePrice, 0, 'COMMA')}원|"></strong>
                                         </td>
                                         <td>
                                             <div class="cnt_box">
@@ -88,12 +95,8 @@
                                             <span class="text">(30,000원 이상 무료)</span>
                                         </td>
                                         <td>
-                                            <button th:data-id="${cartItem.cartItemId}" class="black_btn_w90_h30"
-                                                onclick="order(this)">주문하기</button>
-                                            <button th:data-id="${cartItem.cartItemId}" onclick="deleteCartItem(this)"
-                                                type="button" class="white_btn_w90_h30">
-                                                삭제
-                                            </button>
+                                            <button th:data-id="${cartItem.cartItemId}" class="black_btn_w90_h30 order_btn" type="button">주문하기</button>
+                                            <button th:data-id="${cartItem.cartItemId}" type="button" class="white_btn_w90_h30" onclick="deleteCartItem(this)">삭제</button>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -138,8 +141,8 @@
                         </div>
                     </div>
                     <div class="cart_btn">
-                        <button type="button" class="black_btn_w130_h40" onclick="ordersAllItems()">전체상품주문</button>
-                        <button type="button" class="white_btn_w130_h40" onclick="orders()">선택상품주문</button>
+                        <button type="button" class="black_btn_w130_h40 all_items_order">전체상품주문</button>
+                        <button type="button" class="white_btn_w130_h40 select_order">선택상품주문</button>
                         <span>
                             <button type="button" class="white_btn_w130_h40 resume_btn">쇼핑계속하기</button>
                         </span>
@@ -178,6 +181,10 @@
         </article>
     </main>
 
+    <!-- 주문 form -->
+    <form action="/order" method="get" class="order_form">
+    </form>
+
     <!-- 사용자 JS -->
     <script th:inline="javascript">
         $(document).ready(function () {
@@ -189,6 +196,65 @@
             checkInput.change(function () {
                 getOrderTotalPrice();
             })
+        });
+
+        /* 단일 상품 주문 버튼 */
+        $(".order_btn").on("click", function () {
+            let formContents;
+            let cartItemId = $(this).attr("data-id");
+            let itemIdVal = $("#hiddenItemId_" + cartItemId).val();
+            let countVal = $("#hiddenCount_" + cartItemId).val();
+
+            formContents = "<input name='orders[0].itemId' type='hidden' value='" + itemIdVal + "'>";
+            formContents += "<input name='orders[0].count' type='hidden' value='" + countVal + "'>";
+
+            $(".order_form").html(formContents);
+            $(".order_form").submit();
+        });
+
+        /* 선택 상품 주문 버튼 */
+        $(".select_order").on("click", function () {
+            let formContents;
+            let orderNum = 0;
+
+            $(".cart_info").each(function (index, element) {
+                if($(element).find(".cart_check").is(":checked") === true) {
+
+                    let itemId = $(element).find(".itemId_hidden_input").val();
+                    let count = $(element).find(".count_hidden_input").val();
+
+                    let itemIdInput = "<input name='orders[" + orderNum + "].itemId' type='hidden' value='" + itemId + "'>";
+                    formContents += itemIdInput;
+
+                    let countInput = "<input name='orders[" + orderNum + "].count' type='hidden' value='" + count + "'>";
+                    formContents += countInput;
+
+                    orderNum += 1;
+                }
+            });
+            $(".order_form").html(formContents);
+            $(".order_form").submit();
+        });
+
+        /* 전체 상품 주문 버튼 */
+        $(".all_items_order").on("click", function () {
+            let formContents;
+            let orderNum = 0;
+
+            $(".cart_info").each(function (index, element) {
+                let itemId = $(element).find(".itemId_hidden_input").val();
+                let count = $(element).find(".count_hidden_input").val();
+
+                let itemIdInput = "<input name='orders[" + orderNum + "].itemId' type='hidden' value='" + itemId + "'>";
+                formContents += itemIdInput;
+
+                let countInput = "<input name='orders[" + orderNum + "].count' type='hidden' value='" + count + "'>";
+                formContents += countInput;
+
+                orderNum += 1;
+            });
+            $(".order_form").html(formContents);
+            $(".order_form").submit();
         });
 
         function checkAll() {
@@ -218,8 +284,8 @@
                 orderDiscountPrice += (price.attr("data-price") * (price.attr("data-discount"))) * countVal;
             });
 
-            totalAmount = orderTotalPrice - orderDiscountPrice;
             // 최종 결제 금액 3만원 이상 배송비 무료
+            totalAmount = orderTotalPrice - orderDiscountPrice;
             if (totalAmount >= 30000) {
                 orderDeliveryPrice = 0;
             } else if (totalAmount === 0) {
@@ -241,6 +307,7 @@
             let price = $("#price_" + cartItemId);
             let stock = $("#stock_" + cartItemId);
             let count = $('#count_' + cartItemId);
+            let hiddenCount = $("#hiddenCount_" + cartItemId);
 
             let countVal = obj.value;
             let priceVal = price.data("price");
@@ -248,15 +315,18 @@
             let minCnt = 1;
             let maxCnt = stock.attr("data-stock") * 1;
 
+            hiddenCount.val(obj.value);
             if (countVal < minCnt) {
                 alert('수량은 1개 이상 입력해 주세요.');
                 count.val(1);
+                hiddenCount.val(1);
                 price.html(Math.floor((priceVal * (1 - price.attr("data-discount")))).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
                 getOrderTotalPrice();
                 return;
             } else if (countVal > maxCnt) {
                 alert('죄송합니다. 재고가 부족합니다.');
                 count.val(maxCnt);
+                hiddenCount.val(maxCnt);
                 price.html(Math.floor((priceVal * (1 - price.attr("data-discount"))) * maxCnt).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',') + "원");
                 getOrderTotalPrice();
                 return;
@@ -271,6 +341,7 @@
         function changeCountBtn(obj) {
             let cartItemId = $(obj).attr("data-id");
             let count = $("#count_" + cartItemId);
+            let hiddenCount = $("#hiddenCount_" + cartItemId);
             let price = $("#price_" + cartItemId);
             let stock = $("#stock_" + cartItemId);
             let option = $(obj).attr("data-option");
@@ -282,12 +353,14 @@
 
             if (option === 'down') {
                 countVal -= 1;
+                hiddenCount.val(countVal);
                 if (countVal < minCnt) {
                     alert('수량은 1개 이상 입력해 주세요.');
                     return;
                 }
             } else if (option === 'up') {
                 countVal += 1;
+                hiddenCount.val(countVal);
                 if (countVal > maxCnt) {
                     alert('죄송합니다. 재고가 부족합니다.');
                     return;
@@ -346,84 +419,6 @@
                 })
             } else {
                 false;
-            }
-        }
-
-        /* 1개의 상품 주문 */
-        function order(obj) {
-            if (confirm("선택하신 상품을 주문하시겠습니까?")) {
-                let cartItemId = $(obj).attr("data-id");
-                let paramData = {};
-                let dataList = [];
-
-                dataList.push(cartItemId);
-
-                paramData["cartItemIds"] = dataList;
-
-                let param = JSON.stringify(paramData);
-
-                $.ajax({
-                    url: "/cart/orders",
-                    type: "POST",
-                    contentType: "application/json",
-                    data: param,
-                    dataType: "json",
-                    cache: false,
-                    success: function (result, status) {
-                        alert("주문이 완료 되었습니다.");
-                        location.href = '/orders';
-                    },
-                    error: function (request, status, error) {
-                        if (request.status === '401') {
-                            alert('로그인 후 이용해주세요.');
-                            location.href = '/login';
-                        } else {
-                            alert(request.responseText);
-                        }
-                    },
-                });
-            } else {
-                false;
-            }
-        }
-
-        /* 선택 복수 주문 */
-        function orders() {
-            if (confirm("선택하신 상품을 주문하시겠습니까?")) {
-                let paramData = {};
-                let dataList = [];
-
-                $("input[name=cart_check]:checked").each(function () {
-                    let cartItemId = $(this).val();
-                    dataList.push(cartItemId);
-                });
-
-                paramData["cartItemIds"] = dataList;
-
-                let param = JSON.stringify(paramData);
-
-                $.ajax({
-                    url: "/cart/orders",
-                    type: "POST",
-                    contentType: "application/json",
-                    data: param,
-                    dataType: "json",
-                    cache: false,
-                    success: function (result, status) {
-                        alert("주문이 완료 되었습니다.");
-                        location.href = '/orders';
-                    },
-                    error: function (request, status, error) {
-                        if (request.status === '401') {
-                            alert('로그인 후 이용해주세요.');
-                            location.href = '/login';
-                        } else {
-                            alert(request.responseText);
-                        }
-                    },
-                });
-            } else {
-                return false;
             }
         }
 
